--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,6 +14,7 @@
         Mark's GOV.UK prototype kit
         <span class="heading-secondary">{{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
+      <a class="button" href="start-page">Start prototype</a>
       <p>
         This kit lets you rapidly create HTML prototypes of GOV.UK services.
       </p>
